links in the blog/media/events subnav would expand beyond the subnav if they were too long. this was due to the use of the button classes on those links. I added some styles to override some of those, so they wrap correctly.
git-svn-id: http://svn.apostrophenow.org/plugins/apostrophePlugin/branches/1.5@4105 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/css/a-engines.less
+++ b/web/css/a-engines.less
@@ -22,6 +22,15 @@
 			clear: both;
 			@clearfix;
 			padding: 10px;
+      a.a-link
+      {
+        // Got sick of clients writing long tag names, where they would expand beyond the subnav
+        // the button classes are too restrictive for this application
+        white-space: normal;
+        height: auto;
+        line-height: 1.4;
+        margin-bottom: 4px;
+      }
 		}
 
 		.a-subnav-section
